refactor: address code review for Content-Type validation and log helper
- LogCapturingAppender: add messagesAt(Level), errors(), debugs(); class
  javadoc; UUID-based appender name to avoid collisions
- Use case-insensitive Content-Type check per RFC 7231
- Quote interpolated value in Unexpected Content-Type WARN for readability
- Clean up fully-qualified Log4j2/java.util imports